--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -2,34 +2,28 @@
 <LanguageData>
 
 	<koisama.Numbers.Title>Numbers overview</koisama.Numbers.Title>
-	<koisama.Numbers.Name>Name</koisama.Numbers.Name>
 	<koisama.Numbers.Count>Row Count</koisama.Numbers.Count>
-	<koisama.Numbers.ClickToToggle>Click to select object type.</koisama.Numbers.ClickToToggle>
-	<koisama.Numbers.SortByTooltip>Click to sort by {0}.</koisama.Numbers.SortByTooltip>
+	<koisama.Numbers.ClickToToggle>Click to select pawn type.</koisama.Numbers.ClickToToggle>
 	<koisama.Numbers.RemoveTooltip>Right click to remove column.</koisama.Numbers.RemoveTooltip>
-	<koisama.Numbers.AddColumnLabel>Add stat</koisama.Numbers.AddColumnLabel>
-	<koisama.Numbers.AddSkillColumnLabel>Add skill</koisama.Numbers.AddSkillColumnLabel>
-	<koisama.Numbers.AddNeedsColumnLabel>Add need</koisama.Numbers.AddNeedsColumnLabel>
-	<koisama.Numbers.AddCapacityColumnLabel>Add capacity</koisama.Numbers.AddCapacityColumnLabel>
-	<koisama.Numbers.AddOtherColumnLabel>Add other</koisama.Numbers.AddOtherColumnLabel>
 	<koisama.Numbers.SetPresetLabel>Presets</koisama.Numbers.SetPresetLabel>
 	
-	<koisama.CurrentJob>Current Job</koisama.CurrentJob>	
-	<koisama.QueuedJob>Queued Job</koisama.QueuedJob>	
-	<koisama.Equipment>Equipment</koisama.Equipment>
-	<koisama.Interaction>Prisoner Interaction</koisama.Interaction>
-	<koisama.Interaction.description>How should wardens treat this prisoner.</koisama.Interaction.description>
-	<koisama.MedicalCare>Medical Care</koisama.MedicalCare>
-	<koisama.Age>Age</koisama.Age>
-	<koisama.MentalState>Mental State</koisama.MentalState>
+	<!--- becomes Load {medical/combat} preset -->
+	<Numbers_Presets.Load>Load {0} preset</Numbers_Presets.Load>
+	<Numbers_Presets.Medical>medical</Numbers_Presets.Medical>
+	<Numbers_Presets.Combat>combat</Numbers_Presets.Combat>
+	<Numbers_Presets.WorkTabPlus>worktab plus</Numbers_Presets.WorkTabPlus>
 	
-	<koisama.pawntype.Colonists>Colonists</koisama.pawntype.Colonists>
-	<koisama.pawntype.Enemies>Enemies</koisama.pawntype.Enemies>
-	<koisama.pawntype.Prisoners>Prisoners</koisama.pawntype.Prisoners>
-	<koisama.pawntype.Guests>Guests</koisama.pawntype.Guests>
-	<koisama.pawntype.Animals>Animals</koisama.pawntype.Animals>
-	<koisama.pawntype.WildAnimals>Wild Animals</koisama.pawntype.WildAnimals>
-	<koisama.pawntype.Corpses>Corpses</koisama.pawntype.Corpses>
-	<koisama.pawntype.AnimalCorpses>Animal Corpses</koisama.pawntype.AnimalCorpses>
+	<Numbers_SetAsDefault>Set as default</Numbers_SetAsDefault>
+	<Numbers_SetAsDefaultExplanation>Sets the currently viewed layout as the default for this type of view ({0}). This layout will then be used for new colonies. Can be deleted in the mod settings (Menu => Options => Mod settings => Numbers).</Numbers_SetAsDefaultExplanation>
+	<Numbers_NoDefaultStoredForThisView>There are no defaults stored for the currently viewed pawn type.</Numbers_NoDefaultStoredForThisView>
+	<Numbers_LoadDefault>Load default</Numbers_LoadDefault>
+
+	<Numbers_ShowMoreInfoThanVanilla>Show needs and jobs even where it would normally be hidden.</Numbers_ShowMoreInfoThanVanilla>
+	<Numbers_coolerThanTheWildlifeTab>Numbers is everything I ever wanted from the Wildlife tab and I want it to take over.</Numbers_coolerThanTheWildlifeTab>
+	<Numbers_MaxTableHeight>Max amount of vertical screen space Numbers is allowed to use.</Numbers_MaxTableHeight>
+
+	<Numbers_LoadSavedLayout>Load saved layout</Numbers_LoadSavedLayout>
+	<Numbers_NothingSaved>Nothing saved</Numbers_NothingSaved>
+	<Numbers_SaveCurrentLayout>Save current layout</Numbers_SaveCurrentLayout>
 
 </LanguageData>
