--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -19,11 +19,13 @@
 	<Numbers_NoDefaultStoredForThisView>There are no defaults stored for the currently viewed pawn type.</Numbers_NoDefaultStoredForThisView>
 	<Numbers_LoadDefault>Load default</Numbers_LoadDefault>
 
-	<Numbers_ShowMoreInfoThanVanilla>Show needs and jobs even where it would normally be hidden.</Numbers_ShowMoreInfoThanVanilla>
+	<Numbers_showMoreInfoThanVanilla>Show needs and jobs even where it would normally be hidden.</Numbers_showMoreInfoThanVanilla>
 	<Numbers_coolerThanTheWildlifeTab>Numbers is everything I ever wanted from the Wildlife tab and I want it to take over.</Numbers_coolerThanTheWildlifeTab>
-	<Numbers_MaxTableHeight>Max amount of vertical screen space Numbers is allowed to use.</Numbers_MaxTableHeight>
+	<Numbers_maxTableHeight>Maximum height of the Numbers window relative to your screensize.</Numbers_maxTableHeight>
 	<Numbers_pawnTableClickSelect>Mouse clicks in pawn tables select them. (Alt-click to work as before)</Numbers_pawnTableClickSelect>
-	<Numbers_pawnTableHighSelected>Should behave intuitively like any other selection. Press Esc to close the tab window.\n\nShift-click to select/deselect multiple. Double click to center camera. Right-click to select a single pawn. Alt-click to close window, select and go to that one pawn.</Numbers_pawnTableHighSelected>
+	<Numbers_pawnTableClickSelect_Desc>Should behave intuitively like any other selection. Press Esc to close the tab window.\n\nShift-click to select/deselect multiple. Double click to center camera. Right-click to select a single pawn. Alt-click to close window, select and go to that one pawn. Note: Applies to *all* PawnTables, not just Numbers.</Numbers_pawnTableClickSelect_Desc>
+	<Numbers_pawnTableHighSelected>Highlight selected pawns.</Numbers_pawnTableHighSelected>
+	<Numbers_pawnTableHighSelected_Desc>Note: Applies to *all* PawnTables, not just Numbers.</Numbers_pawnTableHighSelected_Desc>
 
 	<Numbers_LoadSavedLayout>Load saved layout</Numbers_LoadSavedLayout>
 	<Numbers_NothingSaved>Nothing saved</Numbers_NothingSaved>
