--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -21,6 +21,7 @@
 
 	<Numbers_showMoreInfoThanVanilla>Show needs and jobs even where it would normally be hidden.</Numbers_showMoreInfoThanVanilla>
 	<Numbers_coolerThanTheWildlifeTab>Numbers is everything I ever wanted from the Wildlife tab and I want it to take over.</Numbers_coolerThanTheWildlifeTab>
+	<Numbers_coolerThanTheAnimalTab>Numbers is everything I ever wanted from the Animal tab as well and I want it to take over.</Numbers_coolerThanTheAnimalTab>
 	<Numbers_maxTableHeight>Maximum height of the Numbers window relative to your screensize.</Numbers_maxTableHeight>
 	<Numbers_pawnTableClickSelect>Mouse clicks in pawn tables select them. (Alt-click to work as before)</Numbers_pawnTableClickSelect>
 	<Numbers_pawnTableClickSelect_Desc>Should behave intuitively like any other selection. Press Esc to close the tab window.\n\nShift-click to select/deselect multiple. Double click to center camera. Right-click to select a single pawn. Alt-click to close window, select and go to that one pawn. Note: Applies to *all* PawnTables, not just Numbers.</Numbers_pawnTableClickSelect_Desc>
